--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Source+Serif+Pro:wght@200;300;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    
+   
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style2.css" />
+
+
   </head>
   <body>
 
@@ -54,37 +59,105 @@
 
 
 
-    <div class="container-xxl login-register">
-        <div class="row">
-         
-
-          <div class="col search">
-            
-            <div class="buscador"><input type="text" name="search" placeholder="¿A dónde te gustaría ir?" class="busca-home"> </div>
-            <button type="button" class="btn btn-primary btn-sm">América</button>
-            <button type="button" class="btn btn-secondary btn-sm">África</button>
-            <button type="button" class="btn btn-success btn-sm">Oceanía</button>
-            <button type="button" class="btn btn-danger btn-sm">Asia</button>
-            <button type="button" class="btn btn-warning btn-sm">Europa</button>
-          
-
-          </div>  
-            
-         
-          
-
-
-
-
-            
+    
+<div class="container">
+  <div class="row header-carousel">
      
+  </div>
+</div>
 
+<div class="carousel-index">
 
-          
+  <section class="search-sec">
+    <div class="container">
+        <form action="#" method="post" novalidate="novalidate">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row search-btn">
+                        <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-1">
+                            <input type="text" class="form-control search-slt" placeholder="¿A dónde te gustaría ir?">
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-2">
+                            <input type="date" class="form-control search-slt" placeholder="¿Cúando?">
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-3">
+                            <select class="form-control search-slt" id="exampleFormControlSelect1">
+                                <option>Tour guiado</option>
+                                <option>Example one</option>
+                                <option>Example one</option>
+                                <option>Example one</option>
+                                <option>Example one</option>
+                                <option>Example one</option>
+                                <option>Example one</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-12 p-0">
+                            <button type="button" class="btn btn-success wrn-btn search-btn-sub">Buscar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+  </section>
+ 
+  <div class="col botoncitos">
+            
+    
+    <button type="button" class="btn btn-primary btn-sm">América</button>
+    <button type="button" class="btn btn-secondary btn-sm">África</button>
+    <button type="button" class="btn btn-success btn-sm">Oceanía</button>
+    <button type="button" class="btn btn-danger btn-sm">Asia</button>
+    <button type="button" class="btn btn-warning btn-sm">Europa</button>
+  </div> 
+    <div class="col"> <p class="es-pepito">  Aprovechá las 12 cuotas sin interés con la tarjeta de Luis  </p></div>
+  
+  
+  
 
-
-
+<section>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/images/sliderfade1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption  d-md-block">
+          <h5>Visita el Machupichu</h5>
+          <p>Salidas en Octubre y Noviembre.</p>
         </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/sliderfade2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption  d-md-block">
+          <h5>Visita la montaña sarasa</h5>
+          <p>Salidas en Enero.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/images/sliderfade3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption  d-md-block">
+          <h5>Visita Londres</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+
+</div>
+
 
         <div class="row">
           <div class="col divisor-index-1">
@@ -102,44 +175,7 @@
         -->
 
         <div class="row ">
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/images/sliderfade1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block">
-                  <h5>Visita el Machupichu</h5>
-                  <p>Salidas en Octubre y Noviembre.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/sliderfade2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block">
-                  <h5>Visita la montaña sarasa</h5>
-                  <p>Salidas en Enero.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/sliderfade3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption  d-md-block">
-                  <h5>Visita Londres</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+          
       </div>
 
 
@@ -151,37 +187,90 @@
         <div class="row">
             <div class="col"> <h2 class="font-heading">Tours sugeridos</h2> </div>
             
-        </div>
-        <div class="cards row">
-            <div class="col-md-6">
-                <article>
-                    <div class="img-card"> <img width="100%" src="/images/article_1.jpg" alt="Praga" />
-                       <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
-                    </div>
-                        <h4 class="title-card">Tour por Praga - Europa Este</h4>
-                         <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
-                </article>
-            </div>
-
-            <div class="col-md-6">
-                <article>
-                    <div class="img-card"> <img width="100%" src="/images/article_1.jpg" alt="Praga" />
-                        <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
-                    </div>
-                        <h4 class="title-card">Tour por Praga - Europa Este</h4>
-                         <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
-                </article>
-            </div>
-
-            
-         
-            
+        
         </div>
 
 
 
+
+        <div class="container">
+          <div class="row row-cols-1  row-cols-sm-1 row-cols-lg-3 row-cols-xl-3 g-2 g-lg-3">
+            <div class="col">
+              <div class="p-3 border bg-light"> 
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado1.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                      <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border bg-light">
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado2.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                       <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border bg-light">
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado3.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                       <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border bg-light">
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado4.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                       <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border bg-light">
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado5.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                       <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-3 border bg-light">
+                <article>
+                  <div class="img-card"> <img width="100%" src="/images/recomendado6.png" alt="Praga" />
+                      <!-- <a href="./productCart"><p>RESERVAR</p></a> -->
+                  </div>
+                       <p class="text-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>  
+              </article>
+              </div>
+            </div>
+            
+          </div>
+        </div>
         
-        
+        <div class="row">
+          <div class="col"> <h2 class="font-heading">Elige tu próxima aventura</h2> </div>
+          
+        </div>
+        <div class="row">
+          <div class="col"><img width="100%" src="/images/africa.svg" alt="Africa" /></div>
+          <div class="col"><img width="100%" src="/images/america.svg" alt="America" /></div>
+          <div class="col"><img width="100%" src="/images/asia.svg" alt="Asia" /></div>
+          <div class="col"><img width="100%" src="/images/oceania.svg" alt="Oceania" /></div>
+          <div class="col"><img width="100%" src="/images/europa.svg" alt="Europa" /></div>
+
+        </div>
 
 
 
