--- a/views/index.html
+++ b/views/index.html
@@ -35,13 +35,13 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link active" aria-current="page" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Tours</a>
+                  <a class="nav-link" href="/">Tours</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Login </a>
+                  <a class="nav-link" href="/login">Login </a>
                 </li>
                 
               </ul>
@@ -100,8 +100,8 @@
         </form>
     </div>
   </section>
- 
-  <div class="col botoncitos">
+ <div class="row">
+  <div class="col search-btns">
             
     
     <button type="button" class="btn btn-primary btn-sm">América</button>
@@ -110,9 +110,9 @@
     <button type="button" class="btn btn-danger btn-sm">Asia</button>
     <button type="button" class="btn btn-warning btn-sm">Europa</button>
   </div> 
-    <div class="col"> <p class="es-pepito">  Aprovechá las 12 cuotas sin interés con la tarjeta de Luis  </p></div>
+    <div class="col"> <p class="text-desktop-btn"></i> Tu ubicación: Buenos Aires, Argentina <i class="fa-solid fa-location-crosshairs"></i> |  Aprovechá 12 cuotas sin interés con tarjeta Mastercard  </p></div>
   
-  
+  </div>
   
 
 <section>
@@ -273,6 +273,7 @@
         </div>
 
 
+        
 
 
 
