--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -7,6 +7,29 @@
 }
 
 
+  
+  @media screen and (max-width:960px) {
+  .col-test{
+    flex: 100%;
+    max-width: 80%;
+  }
+  }
+  
+  @media screen and (max-width:600px) {
+  .col-test{
+    flex: 100%;
+    max-width: 100%;
+  }
+  }
+  
+
+
+
+
+
+
+
+
 
 
 
@@ -48,37 +71,43 @@ body {
 
     
 }
-.botoncitos {
+.search-btns {
     margin-top: 10px;
     margin-bottom: -8px;
     text-align: center;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center;
     
 }
-.es-pepito {
+.text-desktop-btn {
     display: none;
 }
 @media (min-width: 898px) {
-    .botoncitos {
+    .search-btns {
         margin-top: 10px;
         margin-bottom: 10px;
         text-align: center;
+        
     }
  
 }
 @media (min-width: 1200px) {
-    .botoncitos {
+    .search-btns {
         margin-top: 10px;
         margin-bottom: 10px;
         text-align: start;
+        
     
     }
-    .es-pepito {
+    .text-desktop-btn {
         display: block;
+        margin-top: 10px;
     }
 
 }
 
-
+/*        */
 
 
 .buscador{  
@@ -598,3 +627,125 @@ h1 {
     display: none;
 }
 }
+
+
+
+/* PRODUCT DETAIL */
+
+/* OPINIONES */
+
+.heading {
+    font-size: 25px;
+    margin-right: 25px;
+  }
+  
+  .fa {
+    font-size: 25px;
+  }
+  
+  .checked {
+    color: orange;
+  }
+  
+  /* Three column layout */
+  .side {
+    float: left;
+    width: 15%;
+    margin-top: 10px;
+  }
+  
+  .middle {
+    float: left;
+    width: 70%;
+    margin-top: 10px;
+  }
+  
+  /* Place text to the right */
+  .right {
+    text-align: right;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* The bar container */
+  .bar-container {
+    width: 100%;
+    background-color: #f1f1f1;
+    text-align: center;
+    color: white;
+  }
+  
+  /* Individual bars */
+  .bar-5 {width: 60%; height: 18px; background-color: #04AA6D;}
+  .bar-4 {width: 30%; height: 18px; background-color: #2196F3;}
+  .bar-3 {width: 10%; height: 18px; background-color: #00bcd4;}
+  .bar-2 {width: 4%; height: 18px; background-color: #ff9800;}
+  .bar-1 {width: 1%; height: 18px; background-color: #f44336;}
+  
+  /* Responsive layout - make the columns stack on top of each other instead of next to each other */
+  @media (max-width: 400px) {
+    .side, .middle {
+      width: 100%;
+    }
+    /* Hide the right column on small screens */
+    .right {
+      display: none;
+    }
+  }
+  .opinions {
+      margin-top: 30px;
+      padding: 10px;
+  }
+
+  .testimonials{
+    padding: 40px 0;
+    background: #f1f1f1;
+    color: #434343;
+    text-align: center;
+  }
+  .inner-test{
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 20px;
+  }
+  
+
+  
+  .row-test{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .col-test{
+    flex: 33.33%;
+    max-width: 33.33%;
+    box-sizing: border-box;
+    padding: 15px;
+  }
+  .testimonial-test{
+    background: #fff;
+    padding: 30px;
+  }
+  .testimonial-test img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+  .name-test{
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+  .stars-test{
+    color: #6ab04c;
+    margin-bottom: 20px;
+  }
+ /* FIN OPINIONES Y ESTRELLAS*/
+
+ 
