--- a/views/login.html
+++ b/views/login.html
@@ -24,13 +24,13 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="/">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tours</a>
+                <a class="nav-link" href="/">Tours</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Login </a>
+                <a class="nav-link" href="/login">Login </a>
               </li>
               
             </ul>
