--- a/views/index.html
+++ b/views/index.html
@@ -281,8 +281,8 @@
 
     </div>
 
-    <footer class="footer row">
-      <div class="row align-items-center">
+    <footer class="footer row align-items-center">
+      <div class="row ">
         <div class="contact-us col">
           <h4>Contactanos/ Soporte:</h4>
           <p><i class="fas fa-envelope"></i> tripstarter@gmail.com</p>
