--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -3,90 +3,95 @@
   <head>
     <%- include("./partials/head") %>
   </head>
-  <body>
-    <div class="container-xxl login-register">
-      <div class="row">
-        <div class="col login-logo">
-          <img src="/images/logo-nobg.png" />
+  <body  class="formularioAdminBody">
+    <main>
+      <div class="container-xxl login-register admin">
+        <div class="rowAdminForm">
+          <div class="col login-logo admin">
+            <img src="/images/logo-nobg.png" />
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col">
-          <section class="form-login">
-            <h5>Crear tours></h5>
-            <label>Seleccionar una imagen para el perfil:</label>
-            <input
-              class="input-login"
-              type="file"
-              name="avatar"
-              accept=".jpg"
-              multiple
-            />
-            <input
-              class="input-login"
-              type="text"
-              name="tittle-tour"
-              placeholder="Titulo del tour"
-            />
-            <input
-              class="input-login"
-              type="text"
-              name="description-tour"
-              placeholder="Descripcion del tour"
-            />
-            <input
+        <div class="row adminRow">
+            <section class="form-login adminForm">
+              <h5>Nuevo tour</h5>
+              <label>Seleccionar una imagen para el perfil:</label>
+              <input
+                class="input-login"
+                type="file"
+                name="avatar"
+                accept=".jpg"
+                multiple
+              />
+              <input
+                class="input-login"
+                type="text"
+                name="tittle-tour"
+                placeholder="Titulo del tour"
+              />
+              <input
+                class="input-login"
+                type="text"
+                name="description-tour"
+                placeholder="Descripcion del tour"
+              />
+              <label>Fecha de inicio:</label>
+              <input
+                class="input-login"
+                type="date"
+                name="fecha"
+                value="2021-07-22"
+                min="2018-01-01"
+                max="2022-12-31"
+              />
+              <label>Fecha de finalizacion:</label>
+              <input
               class="input-login"
               type="date"
               name="fecha"
               value="2021-07-22"
               min="2018-01-01"
               max="2022-12-31"
-            />
-            <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-3">
-              <select
-                class="form-control search-slt"
-                id="exampleFormControlSelect1"
-              >
-                <option selected value="" disabled>Destinos</option>
-                <% destinos.forEach(destino => {%>
-
-                <option><%= destino %></option>
-
-                <% }); %>
-              </select>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-3">
-              <select
-                class="form-control search-slt"
-                id="exampleFormControlSelect1"
-              >
-                <option selected value="" disabled>Continentes</option>
-
-                <% continentes.forEach(continente => {%>
-
-                <option><%= continente %></option>
-
-                <% }); %>
-              </select>
-            </div>
-            <input
-              class="input-login"
-              type="tel"
-              name="price-tour"
-              placeholder="Precio"
-            />
-
-            <input class="btn-login" type="submit" value="Agregar tour" />
-          </section>
-        </div>
-        <div class="col"></div>
+              />
+              <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-3">
+                <select
+                  class="form-control search-slt"
+                  id="exampleFormControlSelect1"
+                >
+                  <option selected value="" disabled>Destinos</option>
+                  <% destinos.forEach(destino => {%>
+  
+                  <option><%= destino %></option>
+  
+                  <% }); %>
+                </select>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-12 p-0 btn-3">
+                <select
+                  class="form-control search-slt"
+                  id="exampleFormControlSelect1"
+                >
+                  <option selected value="" disabled>Continentes</option>
+  
+                  <% continentes.forEach(continente => {%>
+  
+                  <option><%= continente %></option>
+  
+                  <% }); %>
+                </select>
+              </div>
+              <input
+                class="input-login"
+                type="tel"
+                name="price-tour"
+                placeholder="Precio"
+              />
+  
+              <input class="btn-login" type="submit" value="Agregar tour" />
+            </section>
       </div>
-      <div class="row">
-        <div class="col"></div>
+      <div class="justMakeSpaceBro"></div>
+    </main>
+    <!-- <footer class="footer row"%-include ("./partials/footer") %> /footer> -->
 
-        <div class="col"></div>
-      </div>
-    </div>
   </body>
 </html>
