--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
             <button type="button" class="btn btn-danger btn-sm">Asia</button>
             <button type="button" class="btn btn-warning btn-sm">Europa</button>
           </div> 
-            <div class="col"> <p class="text-desktop-btn"></i> Tu ubicación: Buenos Aires, Argentina <span class="fas fa-map-marked-alt"></span> |  Aprovechá 12 cuotas sin interés con tarjeta Mastercard  </p></div>
+            <div class="col promo"> <p class="text-desktop-btn"></i> Tu ubicación: Buenos Aires, Argentina <span class="fas fa-map-marked-alt"></span> |  Aprovechá 12 cuotas sin interés con tarjeta Mastercard  </p></div>
           
           </div>
           
@@ -107,11 +107,13 @@
         </section>
       </div>
 
-                <div class="row">
-                  <div class="col divisor-index-1">
-                    <img src="images/logo-nobg.png" width="30%">
-                    <h2>Experiencias inigualables, en todos los sentidos.</h2>
-                    <p> Contratá hoy un tour guiado en Tripstarter </p>
+                <div class="promo">
+                  <div class="row">
+                    <div class="col divisor-index-1">
+                      <img src="images/logo-nobg.png" width="30%">
+                      <h2>Experiencias inigualables, en todos los sentidos.</h2>
+                      <p> Contratá hoy un tour guiado en Tripstarter </p>
+                    </div>
                   </div>
                 </div>
                 <!--<div class="row division-1">
