--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -3,14 +3,11 @@
 <head>
     <%-include ("./partials/head") %> 
 </head>
-<body >
+<body class="bodyNotFound" >
     <main>
-        <section>
-            <div class="contenedor404">
-                <img class="img404" src="\images\ethan-sykes-iISyBKOT2D0-unsplash.jpg" />
-                <div class="texto-encima404">404 - Esta pagina no existe</div>
-            </div>
-        </section>
+ 
+                <button type="button" class="btn btn-outline-success">Success</button></div>
+
     </main>
 
 
